# backend-hackathon-semcomp

./: README.md  pyproject.toml
backend-hackathon/model/: __init__.py  match.py  place.py  placeMatch.py  team.py  user.py
backendHackathon/: __main__.py  config.py
backendHackathon/controller/: place.py  placematches.py  team.py
backendHackathon/model/: __init__.py  match_.py  place.py  placeMatch.py  team.py  user.py
backendHackathon/services/: place.py  team.py  user.py
backendHackathon/tests/: testdb.py
