[tool.poetry]
name = "backend-hackathon-semcomp"
version = "0.1.0"
description = "Backend do projeto hackathon"
authors = ["gp2112 <me@guip.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
backend-hackathon = "backendHackathon.__main__:main()"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
